# my_orchestra

./: CMakeLists.txt
Calibration/: CMakeLists.txt  Rehearsal.cpp
Calibration/Pipeline/: CMakeLists.txt  Calibration2DRecon.cpp  Calibration2DRecon.h  Calibration3DRecon.cpp  Calibration3DRecon.h  CalibrationRehearsalUtils.cpp  CalibrationRehearsalUtils.h
Cartesian/: CMakeLists.txt  Rehearsal.cpp  Rehearsal.h  RunSimple2D.cpp  RunSimple3D.cpp
Epi/: CMakeLists.txt  EpiDiffusionRecon.cpp  EpiDiffusionRecon.h  EpiDiffusionScanArchiveRecon.cpp  EpiDiffusionScanArchiveRecon.h  EpiMultiPhaseRecon.cpp  EpiMultiPhaseRecon.h  EpiRecon.cpp  EpiRecon.h  EpiReferenceScanRecon.cpp  EpiReferenceScanRecon.h  EpiScanArchiveRecon.cpp  EpiScanArchiveRecon.h  Rehearsal.cpp  Rehearsal.h
Flex/: CMakeLists.txt  CommandLine.cpp  CommandLine.h  Rehearsal.cpp  Rehearsal.h  RunFlex.cpp
HS_ModHeader/: CMakeLists.txt  CommandLine.cpp  HS_ModHeader.cpp  Rehearsal.h
HS_PrintHeader/: CMakeLists.txt  CommandLine.cpp  CommandLine.h  HS_PrintHeader.cpp
SWI/: .cproject  .project  CMakeLists.txt  CommandLine.cpp  CommandLine.h  Imakefile.common  Rehearsal.cpp  Rehearsal.h  SWI.cpp  SWI.h
SWI/dev_linux_release64/: Imakefile
SWI/mac64/: Imakefile  Makefile  Makefile.bak
Spectroscopy/: CMakeLists.txt  MultiChannelMultiVoxel.cpp  MultiChannelMultiVoxel.h  PerChannelMultiVoxel.cpp  PerChannelMultiVoxel.h  Rehearsal.cpp  Rehearsal.h  SingleVoxel.cpp  SingleVoxel.h
Spiral/: CMakeLists.txt  Rehearsal.cpp  Rehearsal.h  Spiral2D.cpp  SpiralScanArchiveRecon.cpp  SpiralUtil.cpp  SpiralUtil.h
